# OCR-Bill2Sheet

./: .gitignore  CLAUDE.md  CONSTITUTION.md  README.md
.claude/: settings.local.json
.claude/commands/: runtasks.md
backend/: .env  .env.example  .gitignore  Cargo.toml  README.md  TESTING.md  config.yaml  temp_query.sql  test.txt  test_data_persistence.rs  test_database.sql  test_gemini_response_schema.sh  test_ocr.sh  test_sse_curl.sh  test_sse_events.html  verify_database.sh
backend/migrations/: 20250919093754_create_bill_table.sql
backend/src/: lib.rs  main.rs  state.rs
backend/src/api/: bills.rs  export.rs  health.rs  mod.rs  ocr.rs  response.rs
backend/src/config/: database.rs  gemini_config.rs  mod.rs  server_config.rs  upload_config.rs
backend/src/errors/: mod.rs  upload_error.rs
backend/src/models/: bill.rs  bill_data.rs  export.rs  gemini_request.rs  gemini_response.rs  image_info.rs  mod.rs  ocr_error.rs  sse_events.rs  validation_result.rs
backend/src/services/: bill_extractor.rs  bill_service.rs  export_service.rs  gemini_service.rs  health.rs  image_validation.rs  mod.rs
backend/src/utils/: database.rs  env.rs  image_utils.rs  mod.rs
backend_python/: .env.example  .gitignore  README.md  requirements.txt
backend_python/app/: config.py  database.py  gemini.py  main.py
backend_python/models/: __init__.py  bill.py
backend_python/routers/: __init__.py  bills.py  ocr.py
backend_python/schemas/: __init__.py  bill.py  response.py
frontend/: package-lock.json  package.json
specs/001-connect-postgresql-database/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-create-a-bill/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-bill-service-apis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-add-post-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-modify-api-ocr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-implement-gemini-ocr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-integrate-gemini-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-upload-image-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-export-bills-table/: data-model.md  plan.md  (+4 more)
(+50 files in other folders)
