[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "rust_decimal"] }
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["v4"] }
