[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8.4", features = ["multipart"] }
axum_typed_multipart = "0.12.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3"
image = "0.25.0"
infer = "0.16.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "rust_decimal"] }
tempfile = "3.0"
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["v4"] }
